<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_display_details_margin"
tools:context="edu.usc.a_karmakar.congress_lookup_hw9.CommDetailActivity"
tools:showIn="@layout/activity_comm_detail">
<RelativeLayout
    android:id="@+id/content_comm_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:id="@+id/comm_fav_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/fav_button_comm"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:clickable="true"
            android:onClick="addFavorite"
            android:src="@drawable/ic_inactive_star"
            />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comm_fav_container"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp" >
            <TextView
                android:text="@string/detail_comm_id_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:textStyle="bold"
                android:textSize="@dimen/table_text"
                android:textColor="@color/legNameBlack"
                />
            <TextView
                android:id="@+id/comm_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:gravity="right"
                android:textSize="@dimen/table_text"
                android:textAllCaps="true"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp" >
            <TextView
                android:text="@string/detail_comm_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:textStyle="bold"
                android:textSize="@dimen/table_text"
                android:textColor="@color/legNameBlack"
                />
            <TextView
                android:id="@+id/comm_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:gravity="right"
                android:textSize="@dimen/table_text"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp" >
            <TextView
                android:text="@string/detail_chamb_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:textStyle="bold"
                android:textSize="@dimen/table_text"
                android:textColor="@color/legNameBlack"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end" >
                <ImageView
                    android:id="@+id/comm_chamberImg"
                    android:layout_width="40dip"
                    android:layout_height="45dip"
                    />
                <TextView
                    android:id="@+id/comm_chamb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/table_text_padding"
                    android:gravity="right"
                    android:textSize="@dimen/table_text"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp" >
            <TextView
                android:text="@string/detail_comm_pc_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:textStyle="bold"
                android:textSize="@dimen/table_text"
                android:textColor="@color/legNameBlack"
                />
            <TextView
                android:id="@+id/comm_pc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:gravity="right"
                android:textSize="@dimen/table_text"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp" >
            <TextView
                android:text="@string/detail_leg_phone_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:textStyle="bold"
                android:textSize="@dimen/table_text"
                android:textColor="@color/legNameBlack"
                />
            <TextView
                android:id="@+id/comm_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:gravity="right"
                android:textSize="@dimen/table_text"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="20dp" >
            <TextView
                android:text="@string/detail_leg_office_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:textStyle="bold"
                android:textSize="@dimen/table_text"
                android:textColor="@color/legNameBlack"
                />
            <TextView
                android:id="@+id/comm_office"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/table_text_padding"
                android:gravity="right"
                android:textSize="@dimen/table_text"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
</ScrollView>